--- a/index.html
+++ b/index.html
@@ -1,12 +1,138 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aula 11</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>aula 11</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Início</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row mt-5">
+      <div class="col-lg-6 col-12">
+        <h2>
+          Temporadas da serie Peaky Blinders
+        </h2>
+        <p>
+          A sexta temporada de “Peaky Blinders” chegou à Netflix na última semana após ter sido exibida no começo do
+          ano, através do canal BBC One, no Reino Unido. Porém, para tristeza dos fãs da produção, o sexto capítulo é o
+          último da série, ou seja, não haverá uma sétima temporada
+          Inspirada nos eventos e história da associação criminosa de Birmingham, a série apresenta a história fictícia
+          de vários elementos da família Shelby, enquanto disputavam sem olhar a meios pelo domínio da cidade de
+          Birmingham contra os Birmingham Boys, o gangue Sabini e as forças da lei, após a Primeira Guerra Mundial.
+        </p>
+      </div>
+      <div class="col-lg-6 col-12">
+        <img class="img-fuid" src="imagens/foto 0000.jpg" alt="" class="img-fluid">
+      </div>
+
+    </div><!--Fim da seção início-->
+    <div class="row mt-5">
+      <h2 class="text-center mb-5">
+        Temporadas
+      </h2>
+      <div class="col-12 col-md-6 col-lg-4 mb-5">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="imagens/foto 02.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">1º Temporada
+              <p class="card-text">O que acontece na primeira temporada de Peaky Blinders?
+                A primeira temporada termina com uma verdadeira guerra nas ruas de Birmingham, com Campbell fazendo
+                vista grossa para o embate mortal entre os homens de Shelby e os de Kimber. Tommy mata Kimber, perdoa a
+                traição de Grace e os dois assumem um relacionamento</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-5">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="imagens/Serviços/foto 01.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">2º Temporada
+              <p class="card-text">Na 2ª temporada de Peaky Blinders, o pub da família Shelby é destruído por uma
+                explosão e Tommy passa a ser chantageado por assassinar um dissidente irlandês. Sem saída, ele é
+                obrigado a fazer parte do jogo político de Campbell.O novo ano confirma que a traição foi cometida por
+                Billy Grade (Emmett J. Scanlan), contratado pelos Peaky Blinders para trabalhar na casa de apostas,
+                manipulando os resultados.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-5">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="imagens/" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sistema de Embreagem</h5>
+            <p class="card-text">A embreagem faz partedo sistema de transmissão do veículo, e é responsável por
+              transeferir a força para a caixa de cambio</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-5">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="imagens/Serviços/foto 01.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sistema de Embreagem</h5>
+            <p class="card-text">A embreagem faz partedo sistema de transmissão do veículo, e é responsável por
+              transeferir a força para a caixa de cambio</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-5">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="imagens/Serviços/foto 01.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sistema de Embreagem</h5>
+            <p class="card-text">A embreagem faz partedo sistema de transmissão do veículo, e é responsável por
+              transeferir a força para a caixa de cambio</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-5">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="imagens/Serviços/foto 01.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sistema de Embreagem</h5>
+            <p class="card-text">A embreagem faz partedo sistema de transmissão do veículo, e é responsável por
+              transeferir a força para a caixa de cambio</p>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+
+  </div>
 </body>
+
 </html>
